--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -1,21 +1,21 @@
 <div class="widget">
 
-    <h3 class="widget-title">Name your rent</h3>
+    <h3 class="widget-title">Name Your Rent</h3>
 
     <div class="widget-content">
         <form role="form" ng-submit="placeBid()">
             <div class="form-group">
-                <label for="rentAmountField">Rent</label>
+                <label for="rentAmountField">Desired Rent</label>
                 <input type="number" class="form-control" id="rentAmountField" placeholder="Enter rent amount"
                        ng-model="bid.rentAmount" required>
             </div>
             <div class="form-group">
-                <label for="moveinDateField">Move-in Date</label>
+                <label for="moveinDateField">Your Move-in Date</label>
                 <input type="date" class="form-control" id="moveinDateField" placeholder="Move-in Date"
                        ng-model="bid.moveInDate" required>
             </div>
             <div class="form-group">
-                <label for="leaseTermField">Lease Term</label>
+                <label for="leaseTermField">Length of Stay</label>
                 <select id="leaseTermField" class="form-control" ng-model="bid.leaseTerm" required>
                     <option value="month-to-month">month to month</option>
                     <option value="6-months">6 months</option>
