Updated header and login page

--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -1,42 +1,60 @@
-<div class="jumbotron">
-    <div class="container">
-        <h1>Hello, world!</h1>
-
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a
-            jumbotron and three supporting pieces of content. Use it as a starting point to create something more
-            unique.</p>
-
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
-    </div>
-</div>
 <div class="container">
-    <div class="row">
-        <div class="col-md-4">
-            <h2>Heading</h2>
+<div class="block-content fullwidth background-primary background-map clearfix">
+    <div class="block-content-inner row">
+        <div class="hex-wrapper col-sm-4 center">
+            <div class="clearfix">
+                <div class="hex col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2">
+                    <div class="hex-inner">
+                        <img src="assets/img/hex.png" alt="" class="hex-image">
 
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        <div class="hex-content">
+                            <i class="fa fa-calendar"></i>
+                        </div><!-- /.hex-content -->
+                    </div><!-- /.hex-inner -->
+                </div><!-- /.hex -->
+            </div><!-- /.clearfix -->
+            <h3>Schedule a Visit</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur diping elit. Curabitur non gravida nisi. Nam vel magna
+            </p>
+            <a class="btn btn-white" href="#">More</a>
         </div>
-        <div class="col-md-4">
-            <h2>Heading</h2>
+        <div class="hex-wrapper col-sm-4 center">
+            <div class="clearfix">
+                <div class="hex col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2">
+                    <div class="hex-inner">
+                        <img src="assets/img/hex.png" alt="" class="hex-image">
 
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        <div class="hex-content">
+                            <i class="fa fa-money"></i>
+                        </div><!-- /.hex-content -->
+                    </div><!-- /.hex-inner -->
+                </div><!-- /.hex -->
+            </div><!-- /.clearfix -->
+            <h3>Name your Rent</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur diping elit. Curabitur non gravida nisi. Nam vel magna
+            </p>
+            <a class="btn btn-white" href="#">More</a>
         </div>
-        <div class="col-md-4">
-            <h2>Heading</h2>
+        <div class="hex-wrapper col-sm-4 center">
+            <div class="clearfix">
+                <div class="hex col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2">
+                    <div class="hex-inner">
+                        <img src="assets/img/hex.png" alt="" class="hex-image">
 
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum massa justo sit amet risus.</p>
-
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        <div class="hex-content">
+                            <i class="fa fa-file-text"></i>
+                        </div><!-- /.hex-content -->
+                    </div><!-- /.hex-inner -->
+                </div><!-- /.hex -->
+            </div><!-- /.clearfix -->
+            <h3>Sign the Papers</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur diping elit. Curabitur non gravida nisi. Nam vel magna
+            </p>
+            <a class="btn btn-white" href="#">More</a>
         </div>
-    </div>
+    </div><!-- /.block-content-inner -->
+</div>
 </div>
