--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -1,27 +1,103 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavCtrl">
+<div class="header-navigation" ng-show-auth="'login'">
     <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">rented.io</a>
-        </div>
+        <div class="row">
+            <ul class="header-nav nav nav-pills">
+                <li class="menuparent">
+                    <a href="#">Home</a>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li ng-class="isActive('/home')"><a href="#/home">Home</a></li>
-                <li ng-class="isActive('/properties')"><a href="#/properties">Propeties</a></li>
+                    <ul class="sub-menu">
+                        <li><a href="index.html">Map Version</a></li>
+                        <li><a href="homepage-static-image.html">Static Image</a></li>
+                        <li><a href="homepage-sidebar.html">Sidebar Version</a></li>
+                        <li class="menuparent">
+                            <a href="#">Map Styles</a>
+
+                            <ul class="sub-menu">
+                                <li><a href="index.html?style=1">Version 1</a></li>
+                                <li><a href="index.html?style=2">Version 2</a></li>
+                                <li><a href="index.html?style=3">Version 3</a></li>
+                                <li><a href="index.html?style=4">Version 4</a></li>
+                                <li><a href="index.html?style=5">Version 5</a></li>
+                                <li><a href="index.html?style=6">Version 6</a></li>
+                                <li><a href="index.html?style=7">Version 7</a></li>
+                                <li><a href="index.html?style=8">Version 8</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="menuparent">
+                    <a href="#">Properties</a>
+
+                    <ul class="sub-menu">
+                        <li><a href="property-detail.html">Property Detail</a></li>
+                        <li><a href="properties-rows.html">Rows Style</a></li>
+                        <li><a href="properties-grid.html">Grid Style</a></li>
+                        <li><a href="properties-grid-isotope.html">Isotope Grid</a></li>
+                    </ul>
+                </li>
+
+                <li class="menuparent">
+                    <a href="#">Agencies</a>
+
+                    <ul class="sub-menu">
+                        <li><a href="agency-detail.html">Agency Detail</a></li>
+                        <li><a href="agencies.html">Row Style</a></li>
+                    </ul>
+                </li>
+
+                <li class="menuparent">
+                    <a href="#">Agents</a>
+                    <ul class="sub-menu">
+                        <li><a href="agent-detail.html">Agent Detail</a></li>
+                        <li><a href="agents-small.html">Small Boxes</a></li>
+                        <li><a href="agents-rows.html">Row Style</a></li>
+                        <li><a href="agents-grid.html">Grid Style</a></li>
+                    </ul>
+                </li>
+
+                <li class="menuparent">
+                    <a href="#">Pages</a>
+
+                    <ul class="sub-menu">
+                        <li class="menuparent">
+                            <a href="#">Headers</a>
+                            <ul class="sub-menu">
+                                <li><a href="header-standard.html">Standard</a></li>
+                                <li><a href="header-no-topbar.html">No Topbar</a></li>
+                                <li><a href="header-social-icons.html">Social Icons</a></li>
+                                <li><a href="header-minimal.html">Minimal</a></li>
+                                <li><a href="header-classic.html">Classic</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="submit-property.html">Submit Property</a></li>
+                        <li><a href="create-agency.html">Create Agency</a></li>
+                        <li><a href="my-properties.html">My Properties</a></li>
+                        <li><a href="features.html">Features</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="invoice.html">Invoice Template</a></li>
+                        <li><a href="login.html">Login Form</a></li>
+                        <li><a href="renew-password.html">Renew Password</a></li>
+                        <li><a href="register.html">Registration</a></li>
+                        <li><a href="change-password.html">Change Password</a></li>
+                        <li><a href="terms-conditions.html">Terms &amp; Conditions</a></li>
+                        <li><a href="grid.html">Grid Layout</a></li>
+                        <li><a href="404.html">404 - Not Found</a></li>
+                        <li><a href="500.html">500 - Internal Error</a></li>
+                    </ul>
+                </li>
+                <li class="menuparent">
+                    <a href="#">Blog</a>
+                    <ul class="sub-menu">
+                        <li><a href="blog-left.html">Left Sidebar</a></li>
+                        <li><a href="blog-right.html">Right Sidebar</a></li>
+                        <li><a href="blog-fullwidth.html">Fullwidth</a></li>
+                    </ul>
+                </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li ng-show-auth="['logout','error']"><a href="#/login">login</a></li>
-                <li ng-show-auth="'login'"><a href="#/account">account</a></li>
-                <li ng-show-auth="'login'"><a href="#/logout">logout</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+            <ng-include src="'nav/partials/search.tpl.html'"></ng-include>
+        </div>
+    </div>
+    <!-- /.container -->
+</div>
