--- a/angular/src/app/user/partials/login.tpl.html
+++ b/angular/src/app/user/partials/login.tpl.html
@@ -1,11 +1,34 @@
-<form class="form-signin" role="form">
-    <p ng-show="err" class="error">{{err}}</p>
-    <h2 class="form-signin-heading">Please sign in</h2>
-    <input type="email" class="form-control" placeholder="Email address" ng-model="email" required autofocus>
-    <input type="password" class="form-control" placeholder="Password" ng-model="pass" required>
-    <input ng-cloak ng-show="createMode" type="password" class="form-control" placeholder="Confirm Password" ng-model="confirm"/>
-    <button ng-click="login()" ng-hide="createMode" class="btn btn-lg btn-primary btn-block">Log In</button>
-    <button ng-click="createMode = true" ng-hide="createMode" class="btn btn-lg btn-primary btn-block">Register</button>
-    <button ng-cloak ng-show="createMode" ng-click="createAccount()" class="btn btn-lg btn-primary btn-block">Create Account</button>
-    <button ng-cloak ng-show="createMode" ng-click="createMode = false" class="btn btn-lg btn-inversed btn-block">Cancel</button>
-</form>
+<div class="container">
+    <div class="block-content block-content-small-padding">
+        <div class="block-content-inner">
+            <div class="row">
+                <div class="col-sm-4 col-sm-offset-4">
+                    <h2 class="center">Login</h2>
+                    <p ng-show="err" class="error">{{err}}</p>
+                    <div class="box">
+                        <form method="post" ng-submit="login()">
+                            <div class="form-group">
+                                <label>Login</label>
+                                <input type="email" class="form-control" placeholder="Email address" ng-model="email" required autofocus>
+                            </div><!-- /.form-group -->
+                            <div class="form-group">
+                                <label>Password</label>
+                                <input type="password" class="form-control" placeholder="Password" ng-model="pass" required>
+                            </div><!-- /.form-group -->
+                            <div class="form-group" ng-cloak ng-show="createMode">
+                                <label>Confirm Password</label>
+                                <input  type="password" class="form-control" placeholder="Confirm Password" ng-model="confirm"/>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Login" ng-hide="createMode" class="btn btn-primary btn-inversed btn-block">
+                                <button ng-click="createMode = true" ng-hide="createMode" class="btn btn-lg btn-primary btn-block">Register</button>
+                                <button ng-cloak ng-show="createMode" ng-click="createAccount()" class="btn btn-lg btn-primary btn-inversed btn-block">Create Account</button>
+                                <button ng-cloak ng-show="createMode" ng-click="createMode = false" class="btn btn-lg btn-primary btn-block">Cancel</button>
+                            </div><!-- /.form-group -->
+                        </form>
+                    </div><!-- /.box -->
+                </div>
+            </div><!-- /.row -->
+        </div><!-- /.block-content-inner -->
+    </div><!-- /.block-content -->
+</div><!-- /.container -->
