--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -14,10 +14,11 @@
                 </div><!-- /.hex -->
             </div><!-- /.clearfix -->
             <h3>Schedule a Visit</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur diping elit. Curabitur non gravida nisi. Nam vel magna
-            </p>
-            <a class="btn btn-white" href="#">More</a>
+            <ul>
+                <li>See the property that could be your future home.</li>
+                <li>Attend the open house.</li>
+                <li>Schedule an appointment with the landlord or leasing agent.</li>
+            </ul>
         </div>
         <div class="hex-wrapper col-sm-4 center">
             <div class="clearfix">
@@ -32,10 +33,12 @@
                 </div><!-- /.hex -->
             </div><!-- /.clearfix -->
             <h3>Name your Rent</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur diping elit. Curabitur non gravida nisi. Nam vel magna
-            </p>
-            <a class="btn btn-white" href="#">More</a>
+            <ul>
+                <li>Offer the rent you are willing to pay.</li>
+                <li>Tell us when you can move-in.</li>
+                <li>Pick how long you want to stay (month-to-month OR lease length).</li>
+                <li>Pets are welcome at selected properties.</li>
+            </ul>
         </div>
         <div class="hex-wrapper col-sm-4 center">
             <div class="clearfix">
@@ -50,10 +53,11 @@
                 </div><!-- /.hex -->
             </div><!-- /.clearfix -->
             <h3>Sign the Papers</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur diping elit. Curabitur non gravida nisi. Nam vel magna
-            </p>
-            <a class="btn btn-white" href="#">More</a>
+            <ul>
+                <li>No application or credit check fee!</li>
+                <li>Complete your application in-person or online after the bid is accepted.</li>
+                <li>Prepare to move.</li>
+            </ul>
         </div>
     </div><!-- /.block-content-inner -->
 </div>
