--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -1,7 +1,6 @@
 <div class="widget">
-
     <h3 class="widget-title">Name Your Rent</h3>
-
+    <div class="agent-small" style="width:100%; text-align: center; font-weight: bold; margin-bottom: 0">Suggested Rent</span> $ {{property.rent}}</div>
     <div class="widget-content">
         <form role="form" ng-submit="placeBid()">
             <div class="form-group">
@@ -15,15 +14,10 @@
                        ng-model="bid.moveInDate" required>
             </div>
             <div class="form-group">
-                <label for="leaseTermField">Length of Stay</label>
+                <label for="leaseTermField">Lease Term</label>
                 <select id="leaseTermField" class="form-control" ng-model="bid.leaseTerm" required>
-                    <option value="month-to-month">month to month</option>
-                    <option value="6-months">6 months</option>
                     <option value="1-year">1 year</option>
                     <option value="2-years">2 years</option>
-                    <option value="3-years">3 years</option>
-                    <option value="4-years">4 years</option>
-                    <option value="5-years">5 years</option>
                 </select>
             </div>
             <div class="checkbox">
@@ -39,7 +33,7 @@
     <!-- /.widget-content -->
 </div>
 
-<div class="widget">
+<div class="widget" ng-show="bids">
     <h3 class="widget-title">Top Bids</h3>
     <div class="widget-content">
         <div class="row" ng-repeat="bid in bids | orderByPriority | limitTo:3">
