added property image

--- a/angular/src/app/property/partials/list.tpl.html
+++ b/angular/src/app/property/partials/list.tpl.html
@@ -11,7 +11,7 @@
             <div class="property-row-picture col-sm-6 col-md-6 col-lg-4">
                 <div class="property-row-picture-inner">
                     <a href="#/property/{{id}}" class="property-row-picture-target">
-                        <img src="assets/img/tmp/properties/medium/2.jpg" alt="">
+                        <img src="assets/img/{{id}}/{{property.images[0]}}" alt="">
                     </a>
 
                     <div class="property-row-meta">
