--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -1,3 +1,4 @@
+@import "../assets/css/bootstrap.css";
 @import "../app/user/less/login.less";
 @import "../assets/libraries/font-awesome/css/font-awesome.css";
 @import "../assets/libraries/jquery-bxslider/jquery.bxslider.css";
