--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -4,7 +4,7 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
 </button>
-<div class="pull-right header-navigation collapse navbar-collapse" id="top-navbar-collapse">
+<div class="pull-right collapse navbar-collapse" id="top-navbar-collapse">
     <ul class="nav navbar-nav nav-pills">
         <li class="menuparent">
             <a ng-class="isActive('/home')" href="#/home">Home</a>
