--- a/angular/src/app/property/partials/details.tpl.html
+++ b/angular/src/app/property/partials/details.tpl.html
@@ -48,17 +48,8 @@
                     <!-- /.property-detail-overview -->
                     <h3 align="center" ng-bind-html="property.openHouse"></h3>
 
-                    <div class="flexslider">
-                        <ul class="slides">
-                            <li ng-repeat="s in property.images" data-thumb="assets/img/{{property_id}}/{{s}}">
-                                <img src="assets/img/{{property_id}}/{{s}}" alt="">
-                            </li>
-                        </ul>
-                        <!-- /.slides -->
-                    </div>
+                    <ng-include src="'property/partials/images.tpl.html'"></ng-include>
 
-                    <div ng-flexslider ng-model="property"></div>
-                    <!-- /.flexslider -->
                     <hr>
                     <h2>Description</h2>
 
