Updated cosmetic changes
Renamed "Poor" credit score with "Below Average"
Removed the Bad and Miserable credit score
Did this in both the bid and accounts tpl
Renamed it to say "Place Offer" instead of "Place Bid"
Added /mo for Rent It Now and Suggested Offer
Renamed "Top Bids" to "Top Offers"
Added my Google voice phone number in the top bar

--- a/angular/src/app/property/partials/details.tpl.html
+++ b/angular/src/app/property/partials/details.tpl.html
@@ -7,7 +7,7 @@
                         {{property.address}} {{property.city}}, {{property.state}} {{property.zip}}
                         <a class="btn btn-primary btn-inversed pull-right"
                            href="mailto:matt@elyproperties.com?subject=Want to rent {{property.address}} Now at $1050/mo">Rent
-                            it now for ${{property.rentItNow}}</a>
+                            It Now ${{property.rentItNow}}/mo</a>
                     </h2>
 
                     <div class="property-detail-overview">
