--- a/angular/src/app/user/partials/account.tpl.html
+++ b/angular/src/app/user/partials/account.tpl.html
@@ -25,9 +25,13 @@
                             <option value="excellent">Excellent : 720 and Up</option>
                             <option value="good">Good : 680 to 719</option>
                             <option value="average">Average : 620 to 679</option>
-                            <option value="poor">Poor : 580 to 619</option>
-                            <option value="bad">bad : 500 to 579</option>
-                            <option value="miserable">Miserable : below 500</option>
+                            <option value="poor">Below Average : 580 to 619</option>
+                            
+                            <!-- Removing option for bad and miserable credit score -->
+                    
+                      <!--      <option value="bad">bad : 500 to 579</option>
+                            <option value="miserable">Miserable : below 500</option> -->
+                            
                         </select>
                     </div>
                     <button ng-click="updateUser()" class="btn btn-block btn-primary btn-inversed">update profile</button>
