forcing opacity on modal bg

--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -42,3 +42,7 @@ h4.homepage-property-box-subtitle, h4.homepage-property-box-subtitle a {
 .homepage-block-content{
   padding:50px 0;
 }
+
+.modal-backdrop.in{
+  opacity: 0.8;
+}
