Changed Title and Added favicon

--- a/angular/src/app/nav/partials/header.tpl.html
+++ b/angular/src/app/nav/partials/header.tpl.html
@@ -7,7 +7,7 @@
                 <div class="header-identity" style="padding-top: 15px;">
                     <a href="index.html" class="header-identity-target">
                         <span class="header-icon"><i class="fa fa-home"></i></span>
-                        <span class="header-title">rented.io</span><!-- /.header-title -->
+                        <span class="header-title">RENTED</span><!-- /.header-title -->
                         <span class="header-slogan">Name your Rent&trade;</span><!-- /.header-slogan -->
                     </a><!-- /.header-identity-target-->
                 </div>
