--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -46,3 +46,7 @@ h4.homepage-property-box-subtitle, h4.homepage-property-box-subtitle a {
 .modal-backdrop.in{
   opacity: 0.8;
 }
+
+.header-title{
+  text-transform: none;
+}
