Updated new image for home page and "offer"

--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -169,7 +169,7 @@
                     </li>
                     <li>
                         <i class="fa fa-pencil-square-o "></i> Complete your application in-person or online
-                        after the bid is accepted.
+                        after your offer is accepted.
                     </li>
                     <li>
                         <i class="fa fa-suitcase"></i> Prepare to move.
