--- a/angular/src/app/user/partials/loginform.tpl.html
+++ b/angular/src/app/user/partials/loginform.tpl.html
@@ -29,4 +29,5 @@
         </div>
         <!-- /.form-group -->
     </form>
+    <p>By registering and/or logging in to the system you agree to the <a href="#/terms-and-conditions">Terms and Conditions</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
 </div>
