--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -1,6 +1,6 @@
 <div class="widget">
     <h3 class="widget-title">Name Your Rent</h3>
-    <div class="agent-small h4" style="width:100%; text-align: center; margin-bottom: 0; padding: 15px; font-weight: bold; color: #39b54a">Suggested Offer</span> ${{property.rent}}/mo</div>
+    <div class="agent-small h4" style="width:100%; text-align: center; margin-bottom: 0; padding: 15px; font-weight: bold; color: #39b54a">Starting Offer</span> ${{property.rent}}/mo</div>
     <div class="widget-content">
         <form role="form" ng-submit="placeBid()">
             <div class="form-group">
