--- a/angular/src/app/property/partials/list.tpl.html
+++ b/angular/src/app/property/partials/list.tpl.html
@@ -47,7 +47,7 @@
                     <a href="#/property/{{id}}">{{property.city}}, {{property.state}} {{property.zip}}</a>
                 </h4><!-- /.property-row-subtitle -->
 
-                <div class="property-row-price"><span>Minimum Bid</span> $ {{property.rent}}</div><!-- /.property-row-price -->
+                <div class="property-row-price"><span>Starting Offer</span> $ {{property.rent}}</div><!-- /.property-row-price -->
 
                 <p class="property-row-body" ng-bind-html="property.description">
                 </p><!-- /.property-row-body -->
